--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ text-decoration: none; padding-bottom: 10px; padding-top: 15px; padding-right: 1
 <div class="container">
 <nav>
 	<ul class="menu">
-			<li class="line"><a>What is Modern Art</a></li>
-			<li class="noline"><a href="#bbb">Concept</a></li>
-			<li class="noline2"><a href="https://eun28.github.io/5.22-critic-/">Criticism</a></li>
+			<li class="line"><a href="https://eun28.github.io/final./">What is Modern Art</a></li>
+			<li class="noline"><a href="https://eun28.github.io/final.1/">Concept</a></li>
+			<li class="noline2"><a href="https://eun28.github.io/final.2/">Criticism</a></li>
 			<li class="noline2"><a class="underline-text red-text" href="#ccc">Freedom</a></li>
 			<li class="line2"><a href="https://eun28.github.io/final.4/">Methodology</a></li>
 			<li class="line"><a>Do you want more?</a></li>
